Streamline options retrieval
* Condense XMLHttpRequest to get options data.
* Set default location in function definition instead of hardcoded into html.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="./scripts/autoMath.js"></script>
     <script src="./scripts/characterDataHandler.js"></script>-->
   </head>
-  <body onload="loadOptions(`../resources/data/defaultOptions.json`);">
+  <body onload="loadOptions();">
     <input type="file" id="loadData" style="display: none;" accept=".json,.txt"></input>
     <div class="page overview">
       <header>
