Convert explicit colors to root variables
* Move explicitly defined colors in dark.css and light.css to color.css and main.css.
* Fix placeholders not showing in dark mode.
* Fix profButton expertise shape not matching border.
* Add click and hover color effects for data buttons.

--- a/index.html
+++ b/index.html
@@ -15,26 +15,27 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--End Libraries-->
 
     <!--Stylesheets-->
-    <!--<link rel="stylesheet" href="./style/color.css" />
+    <link rel="stylesheet" href="./style/color.css" />
     <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/mediaQueries.css" />-->
-    <link rel="stylesheet" href="./style/style.css" />
-    <link rel="stylesheet" href="./style/light.css" />
-    <link rel="stylesheet" href="./style/dark.css" />
-    <!--<link rel="stylesheet" href="./customElements/profButton/style/color.css" />
+    <link rel="stylesheet" href="./style/mediaQueries.css" />
+    
+    <!--Custom Elements: profButton-->
+    <link rel="stylesheet" href="./customElements/profButton/style/color.css" />
     <link rel="stylesheet" href="./customElements/profButton/style/main.css" />
-    <link rel="stylesheet" href="./customElements/profButton/style/mediaQueries.css" />-->
-    <link rel="stylesheet" href="./customElements/profButton/style/style.css" />
-    <link rel="stylesheet" href="./customElements/profButton/style/light.css" />
-    <link rel="stylesheet" href="./customElements/profButton/style/dark.css" />
+    <link rel="stylesheet" href="./customElements/profButton/style/mediaQueries.css" />
+    <!--End Stylesheets-->
 
     <!--Scripts-->
+    <!--Custom Elements: profButton-->
     <script src="./customElements/profButton/main.js"></script>
+
     <script src="./resources/data/version.js"></script>
     <script src="./scripts/jsonHandler.js"></script>
     <script src="./scripts/autoMath.js"></script>
+    <!--End Scripts-->
   </head>
   <body onload="loadOptions()">
     <form class="charsheet" id="charsheet" onsubmit="return false">
