[1.6.7] Remove .txt support
* Remove support for .txt character data files. Only .json's are to be used now.
* Remove button data button highlight on focus.
* Clean up and improve some js is jsonHandler and profButton/main.
* Change character data file name to replace spaces with underscores.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section class="data">
           <ul>
             <li>
-              <input type="file" oninput="loadData()" class="loaddata" style="display: none;" accept=".json,.txt"></input>
+              <input type="file" oninput="loadData()" class="loaddata" style="display: none;" accept=".json"></input>
               <button type="button" onclick="document.getElementsByClassName(`loaddata`).item(0).click()">Load</button>
             </li>
             <li>
