Force IE users to load with edge engine
* Add meta tag to force IE users to load with the edge engine.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-US"> 
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <title>D&D Stenograph</title>
     <link
       rel="icon"
