--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
 
     <!--Libraries-->
+    <script src="./libraries/util.js"></script>
     <!--End Libraries-->
 
     <!--Stylesheets-->
