Minimize some CSS
* Minimize some CSS selectors specificity. Namely, only use id/class as opposed to using both element name and id/class.
* Remove "charsheet" class on form element in favor of using id.
* Add "page" class to pages.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!--End Scripts-->
   </head>
   <body onload="loadOptions()">
-    <form class="charsheet" id="charsheet" onsubmit="return false">
-      <div class="frontpage">
+    <form id="charsheet" onsubmit="return false">
+      <div class="frontpage page">
       <header>
         <section class="charname">
           <label for="charname">Character Name</label>
@@ -847,7 +847,7 @@
       </main>
     </div>
     <hr>
-    <div class="spellcastingpage">
+    <div class="spellcastingpage page">
       <header>
         <section class="spellcastingclassandability">
           <label for="spellcastingclassandability">Spellcasting Class (Ability)</label>
@@ -1861,7 +1861,7 @@
       </main>
     </div>
     <hr>
-    <div class="extraspage">
+    <div class="extraspage page">
       <header>
         <section class="charname">
           <label for="charname">Character Name</label>
