Split main.css into multiple files
* Split main.css contents into multiple files based on pages.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!--Stylesheets-->
     <link rel="stylesheet" href="./style/color.css" />
     <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/pages/front.css" />
+    <link rel="stylesheet" href="./style/pages/spellcasting.css" />
+    <link rel="stylesheet" href="./style/pages/extras.css" />
     <link rel="stylesheet" href="./style/mediaQueries.css" />
     
     <!--Custom Elements: profButton-->
@@ -37,7 +40,7 @@
   </head>
   <body onload="loadOptions()">
     <form id="charsheet" onsubmit="return false">
-      <div class="frontpage page">
+      <div class="front-page page">
       <header>
         <section class="charname">
           <label for="charname">Character Name</label>
@@ -847,7 +850,7 @@
       </main>
     </div>
     <hr>
-    <div class="spellcastingpage page">
+    <div class="spellcasting-page page">
       <header>
         <section class="spellcastingclassandability">
           <label for="spellcastingclassandability">Spellcasting Class (Ability)</label>
@@ -1861,7 +1864,7 @@
       </main>
     </div>
     <hr>
-    <div class="extraspage page">
+    <div class="extras-page page">
       <header>
         <section class="charname">
           <label for="charname">Character Name</label>
